Use url encoding for trash fileinfo path as per freedesktop trash specification

https://bugzilla.gnome.org/show_bug.cgi?id=687540